# pyxvis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
gui/: context.py  gdx_browse.ui  xgdx_browse.py  xgdx_browse_backend.py
listings/chapter_01/: ex-1.1.py  ex-1.2.py  ex-1.3.py
listings/chapter_02/: ex-2.1.py
listings/chapter_03/: ex-3.1.py  ex-3.2.py  ex-3.3.py  ex-3.4.py  ex-3.5.py  ex-3.6.py  ex-3.7.py  ex-3.8.py  ex-3.9.py
listings/chapter_04/: ex-4.1.py  ex-4.10.py  ex-4.11.py  ex-4.12.py  ex-4.2.py  ex-4.3.py  ex-4.4.py  ex-4.5.py  ex-4.6.py  ex-4.7.py  ex-4.8.py  ex-4.9.py
listings/chapter_05/: ex-5.1.py  ex-5.10.py  ex-5.2.py  ex-5.3.py  ex-5.4.py  ex-5.5.py  ex-5.6.py  ex-5.7.py  ex-5.8.py  ex-5.9.py
listings/chapter_06/: ex-6.1.py  ex-6.10.py  ex-6.11.py  ex-6.12.py  ex-6.13.py  ex-6.14.py  ex-6.2.py  ex-6.3.py  ex-6.4.py  ex-6.5.py  ex-6.6.py  ex-6.7.py  ex-6.8.py  ex-6.9.py
listings/chapter_07/: ex-7.1.py  ex-7.10.py  ex-7.11.py  ex-7.2.py  ex-7.3.py  ex-7.4.py  ex-7.5.py  ex-7.6.py  ex-7.7.py  ex-7.8.py  ex-7.9.py
listings/chapter_08/: ex-8.1.py  ex-8.2.py  ex-8.3.py  ex-8.4.py
listings/chapter_09/: ex-9.1.py  ex-9.2.py
notebooks/: Chapter_05.ipynb
pyxvis/features/: descriptors.py  extraction.py  selection.py
pyxvis/geometry/: epipolar.py  projective.py
pyxvis/io/: data.py  gdxraydb.py  misc.py  plots.py  visualization.py
pyxvis/learning/: classifiers.py  cnn.py  evaluation.py  gan.py  pretrained.py  transfer.py
pyxvis/processing/: images.py  segmentation.py
(+18 files in other folders)
